Add interactivity to tiles